--- a/3dArkanoids/3dArkanoids.vcxproj
+++ b/3dArkanoids/3dArkanoids.vcxproj
@@ -189,9 +189,11 @@
     <ClCompile Include="SetBoardStateCallData.cpp" />
     <ClCompile Include="SetSerializablePropertyCallData.cpp" />
     <ClCompile Include="SimplexNoise.cpp" />
+    <ClCompile Include="SoundEffectsManager.cpp" />
     <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="stbi_image.cpp" />
     <ClCompile Include="Terrain.cpp" />
+    <ClCompile Include="TextFileResourceListParser.cpp" />
     <ClCompile Include="VisualEffectsManager.cpp" />
     <ClCompile Include="zzfx.c" />
   </ItemGroup>
@@ -253,11 +255,14 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="SimplexNoise.h" />
     <ClInclude Include="SizedQueue.h" />
+    <ClInclude Include="SoundEffectEventArgs.h" />
+    <ClInclude Include="SoundEffectsManager.h" />
     <ClInclude Include="Sphere.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="stb_image_resize.h" />
     <ClInclude Include="stb_image_write.h" />
     <ClInclude Include="Terrain.h" />
+    <ClInclude Include="TextFileResourceListParser.h" />
     <ClInclude Include="transvoxel.h" />
     <ClInclude Include="TSQueue.h" />
     <ClInclude Include="typedefs.h" />
